update notebook mostly for updating binder

--- a/uncanny_notebook.ipynb
+++ b/uncanny_notebook.ipynb
@@ -130,7 +130,7 @@
     "kernel": "Calysto Bash"
    },
    "source": [
-    "## Natural legal language example (abbreviated)"
+    "## Natural legal language example"
    ]
   },
   {
@@ -4878,6 +4878,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Bash"
+   },
+   "outputs": [],
+   "source": [
+    "~/bin/ape.bin"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {
     "kernel": "Bash"
@@ -5008,11 +5019,11 @@
     "\n",
     "The Licensor fixes the Description of Goods.\n",
     "\n",
-    "CLAUSE: Pay.\n",
+    "CLAUSE: License.\n",
     "The Licensee pays the Licensing Fee to the Licensor,\n",
     "and the Breach Fee into escrow.\n",
     "The License is therefore Paid.\n",
-    " \n",
+    "\n",
     "CLAUSE: Commission.\n",
     "The Licensor may certify this License as Commissioned.\n",
     "\n",
@@ -5078,9 +5089,7 @@
     "\n",
     "\"Licensor\" is [ a person ].\n",
     "\"Arbiter\" is [ a person ].\n",
-    "\n",
     "\"License\" is this contract.\n",
-    "\n",
     "\"Licensing Fee\" is [ an amount ].\n",
     "\"Breach Fee\" is [ an amount ].\n",
     "\n",
@@ -5104,7 +5113,7 @@
     "The Licensee pays the Licensing Fee to the Licensor,\n",
     "and the Breach Fee into escrow.\n",
     "The License is therefore Paid.\n",
-    " \n",
+    "\n",
     "CLAUSE: Commission.\n",
     "The Licensor may certify this License as Commissioned.\n",
     "\n",
