added code formatting to DFA

--- a/uncanny_notebook.ipynb
+++ b/uncanny_notebook.ipynb
@@ -132,6 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "stateDiagram-v2\n",
     "    q0 : q0\n",
     "    state \"Offer_Open 😀\" as q0\n",
@@ -213,7 +214,8 @@
     "    sUP --> Obl5BrLic : V\n",
     "    sFP --> Obl5BrLic : V\n",
     "    sFA --> Obl5BrLic : V\n",
-    "    sFR --> Obl5BrLic : V\n"
+    "    sFR --> Obl5BrLic : V\n",
+    "```"
    ]
   },
   {
